--- a/apps/ui/src/app/pages/nwp-item/nwp-item.component.scss
+++ b/apps/ui/src/app/pages/nwp-item/nwp-item.component.scss
@@ -9,6 +9,11 @@
   padding-right: 20px;
 }
 
+.name-season {
+  font-size: 2rem!important;
+  padding-top: 0!important;
+}
+
 .tags {
   display: flex;
   position: relative;
