--- a/apps/ui/src/app/pages/nwp-start/nwp-start.component.scss
+++ b/apps/ui/src/app/pages/nwp-start/nwp-start.component.scss
@@ -110,7 +110,7 @@ h2 {
     padding-left: 20px;
     padding-right: 20px;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     color: #a4a4a4;
 
