--- a/apps/ui/src/app/pages/nwp-welcome/nwp-welcome.component.scss
+++ b/apps/ui/src/app/pages/nwp-welcome/nwp-welcome.component.scss
@@ -19,9 +19,9 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: #000;
   z-index: -1;
-
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
   .bg {
     position: absolute;
     left: 0;
