--- a/apps/ui/src/app/elements/nwp-media-card/nwp-media-card.component.scss
+++ b/apps/ui/src/app/elements/nwp-media-card/nwp-media-card.component.scss
@@ -19,6 +19,25 @@
     outline: none;
     transition: all 0.3s ease-in-out;
 
+    .info {
+      transition: all 0.3s ease-in-out;
+      opacity: 0;
+      pointer-events: none;
+      display: flex;
+      width: 325px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      background-color: #252525;
+      padding: 15px;
+      box-sizing: border-box;
+      overflow: auto;
+      color: #fff;
+      font-size: 0.9rem;
+      white-space: break-spaces;
+    }
+
     .progress {
       position: absolute;
       bottom: 0;
@@ -34,6 +53,23 @@
       }
     }
 
+    &.show-info {
+      justify-content: start;
+      padding-right: 325px;
+
+      .info {
+        opacity: 1;
+        display: flex;
+      }
+
+      .title-container {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      z-index: 999;
+    }
+
     &.thumb {
       height: 150px;
       width: 250px;
@@ -42,7 +78,7 @@
     img.pimage {
       width: 100%;
       height: 100%;
-      position: absolute;
+      //position: absolute;
       object-fit: cover;
       object-position: center center;
       z-index: 2;
@@ -68,6 +104,7 @@
 
     .title-container {
       @include vibrancy-dark-mixin();
+      transition: all 0.3s ease-in-out;
 
       &.fav {
         @include vibrancy-dark-mixin(rgba($accent-color, 0.75));
@@ -83,7 +120,6 @@
       padding: 12px 7px;
       box-sizing: border-box;
       position: absolute;
-      transition: all 0.2s ease-in-out;
 
       .title {
         -webkit-line-clamp: 1;
@@ -100,7 +136,7 @@
     .more {
       position: absolute;
       top: 0;
-      right: 0;
+      left: 0;
       padding: 8px;
       z-index: 90;
       color: $accent-color;
