Items now open in modal by default

--- a/apps/ui/src/app/elements/nwp-toolbar/nwp-toolbar.component.scss
+++ b/apps/ui/src/app/elements/nwp-toolbar/nwp-toolbar.component.scss
@@ -40,6 +40,7 @@
     align-items: center;
     justify-items: center;
     justify-content: center;
+    z-index: 9999;
     @include vibrancy-dark-mixin();
 
     .item {
