--- a/apps/ui/src/app/pages/nwp-start/nwp-start.component.html
+++ b/apps/ui/src/app/pages/nwp-start/nwp-start.component.html
@@ -40,6 +40,7 @@
       <div class="carousel {{ env.platformType }}">
         <div class="carousel {{ env.platformType }}">
           <nwp-media-card
+            [allowHover]="true"
             *ngFor="let item of historyItems"
             @fadeAnimation
             [item]="item"
@@ -81,6 +82,7 @@
       </div>
       <div #scont class="carousel {{ env.platformType }}">
         <nwp-media-card
+          [allowHover]="true"
           *ngFor="let item of row.items"
           @fadeAnimation
           [item]="item"
