- Added Open with modal - Added new Featured on home - Style changes

--- a/apps/ui/src/app/elements/nwp-toolbar/nwp-toolbar.component.html
+++ b/apps/ui/src/app/elements/nwp-toolbar/nwp-toolbar.component.html
@@ -173,7 +173,7 @@
         (click)="showSearch()"
         (ngModelChange)="searchStringUpdate.next($event)"
         [(ngModel)]="searchValue"
-        placeholder="{{ 'search' | translate }}…"
+        placeholder="{{ 'search' | translate }}"
         tabindex="1"
         type="search"
       />
