--- a/apps/ui/src/app/pages/nwp-settings/nwp-settings.component.html
+++ b/apps/ui/src/app/pages/nwp-settings/nwp-settings.component.html
@@ -136,8 +136,8 @@
       </mat-list>
 
       <mat-form-field class="example-full-width">
-        <mat-label>Suche…</mat-label>
-        <input  (input)="filterExtractors($event)" matInput placeholder="Suche…" value="">
+        <mat-label>Suchen</mat-label>
+        <input  (input)="filterExtractors($event)" matInput placeholder="Suchen" value="">
       </mat-form-field>
       <mat-list>
         <div mat-subheader>Andere {{ 'resolver' | translate }}</div>
