--- a/apps/ui/src/app/pages/nwp-start/nwp-start.component.scss
+++ b/apps/ui/src/app/pages/nwp-start/nwp-start.component.scss
@@ -9,6 +9,40 @@ h2 {
   font-size: 2rem;
 }
 
+.feature-container {
+  .feature-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+    position: absolute;z-index: -1;
+    &.blur {
+      filter: blur(25px) saturate(1.5);
+      left: -25px;
+      top: -25px;
+      bottom: -25px;
+      right: -25px;
+    }
+  }
+  h2 {
+    position: absolute;
+    top: 2vh;
+    left: 2vw;
+    font-size: 2rem;
+    border-radius: 10px;
+    font-weight: 400;
+    background-color: rgb(0 0 0 / 50%);
+    padding: 10px;
+  }
+  overflow: hidden;
+  position: relative;
+  height: 50vh;
+  min-height: fit-content;
+  display: flex;
+  flex-direction: column-reverse;
+  margin-bottom: 20px;
+}
+
 #main-carousel-container {
   position: relative;
   width: 100%;
@@ -19,9 +53,9 @@ h2 {
     height: 0;
   }
   #main-carousel {
-    height: 275px;
-    padding: 0;
+    height: 175px;
     scroll-snap-type: x mandatory;
+    padding: 20px;
 
     .item-container {
       scroll-snap-align: center;
@@ -39,7 +73,7 @@ h2 {
       .item {
         border-radius: 8px;
         overflow: hidden;
-
+        width: 300px;
         &.favorite {
           border-top: 7px solid #c2185b;
         }
