Removed Placeholder text

--- a/apps/ui/src/app/pages/setup/nwp-setup.component.html
+++ b/apps/ui/src/app/pages/setup/nwp-setup.component.html
@@ -5,11 +5,6 @@
   class="center"
 >
   <h1>Keine Medien gefunden!</h1>
-  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-    elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-    eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-    dolor sit amet.</p>
+  <p>Installiere ein Medien Provider Plugin um die Anwendung zu benutzen.</p>
   <button (click)="installPlugin()" color="accent" mat-stroked-button>Plugin installieren</button>
 </div>
