--- a/apps/ui/src/app/pages/nwp-start/nwp-start.component.scss
+++ b/apps/ui/src/app/pages/nwp-start/nwp-start.component.scss
@@ -10,12 +10,22 @@ h2 {
 }
 
 .feature-container {
+  video {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+
   .feature-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: top;
-    position: absolute;z-index: -1;
+    position: absolute;
+    z-index: -1;
+
     &.blur {
       filter: blur(25px) saturate(1.5);
       left: -25px;
@@ -24,6 +34,7 @@ h2 {
       right: -25px;
     }
   }
+
   h2 {
     position: absolute;
     top: 2vh;
@@ -34,9 +45,10 @@ h2 {
     background-color: rgb(0 0 0 / 50%);
     padding: 10px;
   }
+
   overflow: hidden;
   position: relative;
-  height: 50vh;
+  height: 65vh;
   min-height: fit-content;
   display: flex;
   flex-direction: column-reverse;
@@ -49,9 +61,11 @@ h2 {
   float: left;
   user-select: none;
   margin-bottom: 25px;
+
   ::-webkit-scrollbar {
     height: 0;
   }
+
   #main-carousel {
     height: 175px;
     scroll-snap-type: x mandatory;
@@ -64,6 +78,16 @@ h2 {
       width: auto;
       box-sizing: border-box;
 
+      transition: all 0.3s ease-in;
+
+      &:hover, &:focus, &:active {
+        transform: scale(1.2);
+        z-index: 10;
+        .item {
+          box-shadow: 0 0 15px #00000085;
+        }
+      }
+
       @media only screen and (max-width: 768px) {
         padding: 0;
         width: 100vw;
@@ -74,6 +98,7 @@ h2 {
         border-radius: 8px;
         overflow: hidden;
         width: 300px;
+
         &.favorite {
           border-top: 7px solid #c2185b;
         }
@@ -128,9 +153,11 @@ h2 {
   width: 100%;
   user-select: none;
   scroll-snap-type: x mandatory;
+
   ::-webkit-scrollbar {
     height: 0;
   }
+
   &:hover {
     .carousel-scroll-button {
       opacity: 1;
